--- a/public/css/styleChino.css
+++ b/public/css/styleChino.css
@@ -9,6 +9,7 @@ https://coolors.co/palette/d7cabe-ccbba9-ddd0c0-e8e1d9-ac906a-c6a981-866a3e-ba96
   /* #876c3d */
   --secondary-color: #E0DAD5;
   --accent: #BA9664;
+  --font-color: #E5d075;
 }
 
 body {
@@ -59,7 +60,7 @@ body {
   max-height: 60vw;
   padding: 0;
   display: grid;
-  grid-template-columns: 42% 70%;
+  grid-template-columns: 55% 70%;
   grid-template-rows: 100%;
   overflow: hidden;
 }
@@ -68,8 +69,8 @@ body {
   display: none;
 }
 
-#invitacion-fondo, #logo-caption, #mensaje, 
-#introduccion, #detalles, #firma {
+#invitacion-fondo, #logo-caption, #familias, #nombres, 
+#introduccion, #detalles, #vestimenta, #displayMsg, #invitado {
   grid-row-start: 1;
   grid-row-end: 2;
   grid-column-start: 1;
@@ -81,25 +82,17 @@ body {
   z-index: 1;
 }
 
-#logo-caption, #mensaje, #introduccion, #detalles, #firma  {
+#logo-caption, #familias, #nombres, #introduccion, #detalles, #displayMsg, #invitado {
   z-index: 2;
 }
 
-#mensaje {
-  display: grid;
-  height: 10%;
-  max-width: 80%;
-  justify-content: center;
-  margin-top: 60%;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0;
-  font-family: 'Gwendolyn', cursive;
-  font-size: 4vw;
-  line-height: 3.5vw;
-  text-align: center;
-  color: var(--darkest);
+#displayMsg {
+  z-index: 3;
+  font-size: 35px;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  padding-top: 35.5vw;
+  color: var(--font-color);
 }
 
 #cover-photo {
@@ -127,6 +120,27 @@ body {
   margin-top: 20px;
 }
 
+@media screen and (max-width: 2100px) {
+  #displayMsg {
+    font-size: 28px;
+    padding-top: 35.5vw;
+  }
+}
+
+@media screen and (max-width: 1800px) {
+  #displayMsg {
+    font-size: 20px;
+    padding-top: 35.5vw;
+  }
+}
+
+@media screen and (max-width: 1800px) {
+  #displayMsg {
+    font-size: 18px;
+    padding-top: 35.25vw;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .welcome {
     max-height: 5000px;
@@ -135,7 +149,7 @@ body {
   }
   
   #invitacion-fondo, #logo-caption, #introduccion, 
-  #detalles, #mensaje, #firma  {
+  #familias, #detalles, #nombres, #displayMsg, #invitado  {
     grid-row-start: 1;
     grid-row-end: 2;
     grid-column-start: 1;
@@ -143,24 +157,26 @@ body {
     width: 100%;
     height: auto;
   }
-
-  .welcome #cover-photo {
+  #displayMsg {
+    font-size: 25px;
+    padding-top: 82%;
+  }
+  #cover-photo {
     height: 100vh;
-    max-height: 1000px;
+    max-height: 800px;
     grid-area: 2 / 1 / 3 / 2;
     justify-self: center;
     transform: translateX(-5%);
-  }
-
-  #mensaje {
-    font-size: 9vw;
-    line-height: 10vw;;
   }
 }
 
 @media screen and (max-width: 800px) {
   #cover-photo {
-    max-height: 800px;
+    max-height: 600px;
+  }
+  #displayMsg {
+    font-size: 20px;
+    padding-top: 82.5%;
   }
 }
 
@@ -172,11 +188,9 @@ body {
   #cover-photo {
     max-height: 600px;
   }
-
-  #mensaje {
-    font-size: 12vw;
+  #displayMsg {
+    font-size: 19px;
   }
-  
   .side {
     width: 80vw;
   }
@@ -184,8 +198,17 @@ body {
 
 @media screen and (max-width: 500px) {
   #cover-photo {
-    max-height: 400px;
+    max-height: 500px;
     animation: slide 15s ease-in-out infinite;
+  }
+  #displayMsg {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #displayMsg {
+    font-size: 12px;
   }
 }
 
